# Medical-GenAI

./: README.md  pdf_rag.ipynb  pyproject.toml
